[gd_scene load_steps=2 format=3 uid="uid://dxq8hch18qwm6"]

[ext_resource type="Script" path="res://scripts/menu_pause.gd" id="1_c7xod"]

[node name="menu_pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7xod")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reiniciar "

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opções"

[node name="back2menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Voltar para o Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back2menu" to="." method="_on_back_2_menu_pressed"]
